# skywatch-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/design-plans/: 2026-03-31-skywatch-mcp-py.md
docs/implementation-plans/2026-03-31-skywatch-mcp-py/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  test-requirements.md
docs/test-plans/: 2026-03-31-skywatch-mcp-py.md
src/skywatch_mcp/: config.py  server.py
src/skywatch_mcp/lib/: CLAUDE.md  clickhouse_client.py  ozone_api.py  sanitizers.py  sql_validation.py  url_shorteners.py  whois_parser.py
src/skywatch_mcp/tools/: CLAUDE.md  account_entropy.py  clickhouse.py  content.py  cosharing.py  domain.py  ip.py  ozone.py  quote_overdispersion.py  signup_anomaly.py  url.py  url_overdispersion.py  whois.py
tests/: conftest.py  test_account_entropy.py  test_clickhouse.py  test_clickhouse_tools.py  test_config.py  test_content.py  test_cosharing.py  test_domain.py  test_ip.py  test_ozone.py  test_quote_overdispersion.py  test_response_shapes.py  test_sanitizers.py  test_server.py  test_signup_anomaly.py  test_sql_validation.py  test_url.py  test_url_overdispersion.py  test_url_shorteners.py  test_whois_parser.py  test_whois_tool.py
