[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skywatch-mcp"
version = "0.1.0"
description = "MCP server for investigating activity on the AT Protocol / Bluesky network"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "clickhouse-connect>=0.7",
    "httpx>=0.27",
    "dnspython>=2.6",
    "python-whois>=0.9",
]

[project.scripts]
skywatch-mcp = "skywatch_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "mypy>=1.13.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "clickhouse_connect.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "whois"
ignore_missing_imports = true
